# cratedig

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  cratedig.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
packaging/: cratedig_entry.py
src/cratedig/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging_setup.py  models.py
src/cratedig/core/: __init__.py  orchestrator.py
src/cratedig/download/: __init__.py  matcher.py  youtube_downloader.py
src/cratedig/lyrics/: __init__.py  lyrics_fetcher.py
src/cratedig/providers/: __init__.py  musicbrainz_handler.py  spotify_handler.py
src/cratedig/tagging/: __init__.py  tagger.py
tests/: test_cli.py  test_config.py  test_logging_setup.py  test_lyrics_fetcher.py  test_matcher.py  test_models.py  test_musicbrainz_handler.py  test_orchestrator.py  test_spotify_handler.py  test_tagger.py  test_youtube_downloader.py
tests/fixtures/: album.json  album_page2.json  mb_recording.json  mb_release.json  mb_search.json  playlist_page1.json  playlist_page2.json  track.json
